# librarian

./: .gitignore  .pre-commit-config.yaml  README.md  library.duckdb  main.py  pyproject.toml  tasks
scripts/: populate_library.py
src/: librarian.py
src/database/: library.py  schema.sql
src/entities/: book.py  subject.py
src/inference/: book.py  subject.py  user.py
src/librarian/: app.py
src/librarian/database/: library.duckdb  library.py  schema.sql
src/librarian/entities/: book.py  subject.py
src/librarian/inference/: book.py  curriculum.py  subject.py  user.py
src/librarian/llm/: agent.py  config.py
src/librarian/sources/: pdf_source.py  text_source.py
src/scripts/: create_curriculum.py  populate_library.py
src/sources/: pdf_source.py
