[project]
name = "librarian"
version = "0.1.0"
description = "An interactive catalogue for non-fiction literature"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "duckdb>=1.4.3",
    "pdfplumber>=0.11.8",
    "pillow>=11.3.0",
    "polars>=1.36.1",
    "pre-commit>=4.3.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "ruff>=0.14.10",
]
