[project]
name = "librarian"
version = "0.1.0"
description = "An interactive catalogue for non-fiction literature"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "duckdb>=1.4.3",
    "pdfplumber>=0.11.8",
    "pillow>=11.3.0",
    "pip>=25.3",
    "pre-commit>=4.3.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "ruff>=0.14.10",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
